<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircuitListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:text="@string/circuits"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/circuit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/address"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_circuits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>